...
        "content": "<a href={shadowsocksUrl}>Shadowsocks</a>"
      }
    }
  },
  "about_page_title": {
    "description": "The title of a page giving details about the app.",
    "message": "About"
  },
  "accept": {
    "description": "Text in a button for when the user wants to accept their changes.",
    "message": "Accept"
  },
  "add_access_key_dialog_error_text": {
...
        "content": "{openLink}"
      }
    }
  },
  "add_access_key_dialog_label": {
    "description": "The label for a text box where the user can paste an access key to add a new server.",
    "message": "Paste access key here"
  },
  "appearance_dark": {
    "description": "The text for a main menu item that takes the user to a page to set the application appearance to dark mode.",
    "message": "Dark"
  },
  "appearance_light": {
...
  "close": {
    "description": "The text for a button to close the current page or dialog.",
    "message": "Close"
  },
  "confirm": {
    "desciption": "The text on a button to confirm the current operation.",
    "message": "Confirm"
  },
  "connect_button_label": {
    "description": "A text button on a particular server to connect to that server",
    "message": "Connect"
  },
  "connected_server_state": {
...
        "example": "ss://"
      }
    }
  },
  "server_add": {
    "description": "Text button for the user to add the access information another server to the application.",
    "message": "Add server"
  },
  "server_add_access_key": {
    "description": "The title of the form to add a new server to the application by using a special access key.",
    "message": "Add access key"
  },
  "server_add_ignore": {
...
