...
import * as Sentry from '@sentry/electron/main';
import autoLaunch = require('auto-launch'); // eslint-disable-line @typescript-eslint/no-require-imports
import {
  app,
  BrowserWindow,
  ipcMain,
  Menu,
  MenuItemConstructorOptions,
  nativeImage,
  shell,
  Tray,
} from 'electron';
import {autoUpdater} from 'electron-updater';
...
